# karel-the-robot

./: .packit.yaml  AUTHORS  AUTHORS.md  CMakeLists.txt  INSTALL.md  Makefile  README.md  TODO.md  changelog.md  karel.spec
.github/workflows/: build.yml
doc/examples/: CMakeLists.txt  stairs.c  stairs.kw  training.c
doc/html/: index.html  style.css
include/: internals.h  karel.h  superkarel.h
po/: karel.pot  readme.md
po/sk/: karel.mo  karel.po
src/: internals.c  karel.c  superkarel.c
tests/: CMakeLists.txt
tests/karel/: CMakeLists.txt  runner.c  suite_beepers_in_bag.c  suite_facing_north.c  suite_front_is_clear.c
tests/superkarel/: CMakeLists.txt  runner.c  suite_facing_east.c  suite_facing_south.c  suite_facing_west.c  suite_no_beepers_in_bag.c  suite_not_facing_east.c  suite_not_facing_north.c  suite_not_facing_south.c  suite_not_facing_west.c
